--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ayngk#1" target="_blank">首页</a> | <a href="https://db8nk66phkh66.cloudfront.net/1?lnhrhf" target="_blank">动态网</a> | <a href="https://djwddd4nnr0na.cloudfront.net/2?ejqnz" target="_blank">大纪元</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/4?usyibar" target="_blank">看中国</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/pHh5q?pjvbpymu" target="_blank">新生网</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/tktpt?vayzp" target="_blank">阿波罗网</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/Mjpvu?gseeudo" target="_blank">干净世界</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/10?tptcrx" target="_blank">退党服务</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/Rffqf?wbundhkc" target="_blank">明慧广播</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/nw9Vn?dpben" target="_blank">传奇时代</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/AF9AG?hbrkc" target="_blank">新境界影视</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/zqMQA?jwbiug" target="_blank">文昭谈论</a> | <a href="https://d14a0yccee2yym.cloudfront.net/7?qbrksl" target="_blank">明慧</a></p><p><a href="https://dwzgr3popmlhv.cloudfront.net/9?mdqstllny" target="_blank">大法</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/3?urquovltb" target="_blank">新唐人</a> | <a href="https://db8nk66phkh66.cloudfront.net/obAhT?owfxwrc" target="_blank">人民报</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/xXNHu?gnimcvtg" target="_blank">放光明</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/5?iluft" target="_blank">新纪元</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/6?xhigdzssf" target="_blank">希望之声</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/11?rjwuyzc" target="_blank">无界网络</a> | <a href="https://d265ujbtchne9r.cloudfront.net/Pueji?wlumdkblx" target="_blank">追查国际</a> | <a href="https://d124e4v75n9sum.cloudfront.net/16?oeyinktm" target="_blank">明慧之窗</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/LdvzZ?tkkmk" target="_blank">细语人生</a> | <a href="https://duxu97yt14q37.cloudfront.net/fBn3r?mmznj" target="_blank">新世纪影视</a> | <a href="https://djwddd4nnr0na.cloudfront.net/PUWMb?mqysabiow" target="_blank">江峰时刻</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/8?ozyepi" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?zmdqg#1" target="_blank">首页</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/1?bzdyg" target="_blank">动态网</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/2?qwaazv" target="_blank">大纪元</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/4?otprnqkxg" target="_blank">看中国</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/pHh5q?ekowd" target="_blank">新生网</a> | <a href="https://d3abchfok6e2j.cloudfront.net/tktpt?mliplmdl" target="_blank">阿波罗网</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/Mjpvu?qyhwcafg" target="_blank">干净世界</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/10?eubjrsum" target="_blank">退党服务</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/Rffqf?midvtmx" target="_blank">明慧广播</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/nw9Vn?nctpo" target="_blank">传奇时代</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/AF9AG?dfrcdp" target="_blank">新境界影视</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/zqMQA?gkpitkzq" target="_blank">文昭谈论</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/7?ojgbd" target="_blank">明慧</a></p><p><a href="https://d21y52w6f35pla.cloudfront.net/9?jslrwy" target="_blank">大法</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/3?kkjptfiri" target="_blank">新唐人</a> | <a href="https://di88ceki78g29.cloudfront.net/obAhT?znhaiuea" target="_blank">人民报</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/xXNHu?pddzezdqp" target="_blank">放光明</a> | <a href="https://doqmgyop4u892.cloudfront.net/5?rxjolp" target="_blank">新纪元</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/6?jhugjfks" target="_blank">希望之声</a> | <a href="https://dycmgeziwp90b.cloudfront.net/11?sqwzbtaqe" target="_blank">无界网络</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Pueji?jitykpzda" target="_blank">追查国际</a> | <a href="https://d78f5frq5siq8.cloudfront.net/16?zewqx" target="_blank">明慧之窗</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/LdvzZ?dlepek" target="_blank">细语人生</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/fBn3r?mkbre" target="_blank">新世纪影视</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/PUWMb?pvyunj" target="_blank">江峰时刻</a> | <a href="https://divmj5v44rbg.cloudfront.net/8?tgvuawbf" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278861.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14279044-AFP__20240628__34ZM48Y__v1__HighRes__PresidentJoeBidenAndDonaldTrumpHoldPresidential-320x200.jpg"><p align="center">【更新】美总统大选首场辩论 唇枪舌剑</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278861.md#1" title="【更新】美总统大选首场辩论 唇枪舌剑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14279044-AFP__20240628__34ZM48Y__v1__HighRes__PresidentJoeBidenAndDonaldTrumpHoldPresidential-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278853.md#1" title="美航母打击群视频披露红海前线激战场景""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278856-AFP__20240624__34YN6G7__v3__HighRes__UsYemenConflictShippingRedSea-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278790.md#1" title="拜登与川普首场辩论 您需要关注哪些方面？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278814-000-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278744.md#1" title="专家评李尚福魏凤和案：中共内乱的开始""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/09/id14080656-000_33AN6QZ-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279146.md#1">加州宠物驴失踪 5年后现身野生驼鹿群中</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279154.md#1">全美医保欺诈大扫荡 纽约两华人在193名被告中</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279139.md#1">庄文怡社区会 西人居民抱怨86街脏乱差</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279144.md#1">纽约市府拟恢复图书馆预算 周日可望重新开放</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279150.md#1">布碌崙火灾四人受伤 锂电池又是罪魁祸首</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279176.md#1">房价利率双高 纽约买房路在何方</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279172.md#1">与李尚福命运不同 秦刚遭降级调职了事？</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279191.md#1">冯德莱恩获提名连任欧盟委员会主席</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279035.md#1">游客消费成经济支柱 日本“观光立国”见效</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279146.md#1">加州宠物驴失踪 5年后现身野生驼鹿群中</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279154.md#1">全美医保欺诈大扫荡 纽约两华人在193名被告中</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279139.md#1">庄文怡社区会 西人居民抱怨86街脏乱差</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277535.md#1">“高考达人”梁实再落榜 称“心情烂透了”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278024.md#1">中国经济低迷 物流仓库和工业园区大量空置</a><br>
@@ -40,13 +40,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145798.md#1">【图解】川普面临的法律挑战</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278744.md#1">专家评李尚福魏凤和案：中共内乱的开始</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279172.md#1">与李尚福命运不同 秦刚遭降级调职了事？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278886.md#1">钟原：李尚福、魏凤和被通报泄露了什么？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278808.md#1">分析：战争迭起中共欲抢武器市场 但危机难解</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278854.md#1">周晓辉：李尚福魏凤和罪名确定 官媒措辞超徐郭</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278879.md#1">专家：中共融资平台带来“定时炸弹”风险</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278788.md#1">德媒：中共砸钱贿赂德国教授 获取军事技术</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278879.md#1">专家：中共融资平台带来“定时炸弹”风险</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1">中共三中全会确定会期 专家：释恐惧垮台信号</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277203.md#1">【直播】美国总统大选首场辩论登场</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279136.md#1">【翻墙必看】中共救楼市大招皆失灵了</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278696.md#1">中共又出楼市大招 分析：民众不买账</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278455.md#1">大陆消费不振实体店倒闭 民众的钱去哪儿了</a><br>
@@ -99,13 +99,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14275030.md#1">前上海公职人员：防疫封城是场政治运动</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275551.md#1">13省市今起有暴雨 湖南多城区被淹</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271495.md#1">美中俄高层轮番来访 越南为何举足轻重</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3mwv7bn8l33uo.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3mwv7bn8l33uo.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,047</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dheytf8g4uml5.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dheytf8g4uml5.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,047</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,401,072 人
+!共 432,401,323 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278901.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278913-xingjianFotoJet-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278901.md#1">邢鉴抗议活动中被殴 吁新西兰对外国干预立法</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278372.md#1">重庆妇女控诉 医疗事故导致其家破人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278214.md#1">蒙古国知名歌手演出被中共取消</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278153.md#1">制作高智晟壁画了愿 教师逃美找到人生新起点</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277784.md#1">中国民主党两主席陷囹圄 海外党员吁中共释放</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277221.md#1">新报告揭器官移植产业背后中共活摘暴行</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278958.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235490-GettyImages-1915751404-1080x720-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278958.md#1">大陆电动汽车保费高企 车主被逼卖车</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279134.md#1">中国房企远洋集团遭清盘呈请 股价跌10%</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279010.md#1">外资再次逃离 全球基金重新抛售中国股票</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278967.md#1">中国百亿级主动益类基金数量三年锐减近七成</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278952.md#1">小米集团股价暴跌 拖累香港科技股普跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278767.md#1">新疆奴工案 维吾尔组织赢上诉 Shein伦敦上市遇阻</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279084.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14266907-9_GettyImages-2067456559-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279084.md#1">三任火箭军司令齐出事 李尚福或对魏凤和行贿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278885.md#1">人民币频碰2%浮动下限 专家警告政策变更风险</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278828.md#1">菲总统称需加强抗共 白宫重申对菲铁杆承诺</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1">上海前人大主任受审 曾被指帮情妇获政协委员资格</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278503.md#1">中共党媒高官称记者写稿要当奏折写 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278604.md#1">台陆委会提高陆港澳旅游警示 建议避免前往</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276271-6190399658d0aa81774f0f6c042a418d-e1719478794476-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1">6省34条河流现超警洪水 湘江洪峰过境长沙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278369.md#1">长春房屋坍塌酿5伤1失踪 民拍视频被威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277700.md#1">浙江水亭门古城墙北段坍塌 现场画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277679.md#1">云南丽江17分钟连发3次地震 最高4.5级</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277319.md#1">中国经济衰退冲击养老院 农村现“退院潮”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277265.md#1">内蒙古一家五口灭门案 网曝嫌犯被逼急杀人</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1">上海知名橱柜公司“全屋定制”门店人去楼空</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277952.md#1">苏州袭击事件后 旅居上海的日本人提高警觉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277745.md#1">接连2起外国人遇袭案 中共被指放任仇外情绪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277493.md#1">三退声明精选（2024/06/25）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276852.md#1">办银行卡需要派出所同意 长春储户不满</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276784.md#1">中国农村中小银行洗牌 7天40家合并或解散</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268174-11_id13734986-000_9UB6PT-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259194.md#1">造假风气蔓延至香港 陆生以假文凭入读港大</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
